[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/menu/online/OnlineMenu.gd" type="Script" id=2]

[node name="OnlineMenu" type="MarginContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -34.0
theme = ExtResource( 1 )
custom_constants/margin_top = 2
custom_constants/margin_bottom = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 2.0
margin_right = 64.0
margin_bottom = 33.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
margin_left = 18.0
margin_right = 45.0
margin_bottom = 31.0
custom_constants/vseparation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="Button" parent="CenterContainer/GridContainer"]
margin_right = 27.0
margin_bottom = 9.0
text = "Create"

[node name="Join" type="Button" parent="CenterContainer/GridContainer"]
margin_top = 11.0
margin_right = 27.0
margin_bottom = 20.0
text = "Join"

[node name="Back" type="Button" parent="CenterContainer/GridContainer"]
margin_top = 22.0
margin_right = 27.0
margin_bottom = 31.0
text = "Back"
[connection signal="pressed" from="CenterContainer/GridContainer/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Back" to="." method="_on_Back_pressed"]
